feat: update controllers, service and generate route
